fix:fixed swegger docs request body
